--- a/script/install
+++ b/script/install
@@ -7,8 +7,10 @@ set -e
 cd "$(dirname $0)"/..
 
 # Run Homebrew through the Brewfile
-echo "› brew bundle"
-brew bundle
+if [ "$(uname -s)" == "Darwin" ]
+  echo "› brew bundle"
+  brew bundle
+fi
 
 # find the installers and run them iteratively
 find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
