give run mode to all install scripts and update gitconfig and dot script

--- a/script/install
+++ b/script/install
@@ -8,6 +8,7 @@ cd "$(dirname $0)"/..
 
 # Run Homebrew through the Brewfile
 if [ "$(uname -s)" == "Darwin" ]
+then
   echo "› brew bundle"
   brew bundle
 fi
