--- a/script/install
+++ b/script/install
@@ -15,4 +15,4 @@ then
 fi
 
 # find the installers and run them iteratively
-find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
+find . -maxdepth 2 -name install.sh | while read installer ; do sh -c "${installer}" ; done
